# WebServer

./: .gitignore  CMakeLists.txt  README.md
TestCode/: http메서드 확장.py
include/: config.h  connection.h  error_handle.h  file_handler.h  http_parser.h  server.h
src/: config.c  connection.c  error_handle.c  file_handler.c  http_parser.c  main.c  server.c
static/: bigimage.html  bigimagetest.html  data.json  index.html
